--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -3,7 +3,7 @@ $base-colors: (
   highlight: #1b2028,
   dark-highlight: black,
   slight-highlight: mix(#0E0E0E, transparent, 50%),
-  divider: #323235,
+  divider: #1b2028,
   primary-text: #aaaaaa,
   secondary-text: #7c7c7c,
   primary: #4d698e,
