--- a/app/assets/stylesheets/components/sticker.scss
+++ b/app/assets/stylesheets/components/sticker.scss
@@ -1,5 +1,5 @@
 .sticker {
-  color: white;
+  color: var(--text-on-bright-color);
   font-size: 0.9rem;
   padding: 0 4px;
   margin-bottom: 5px;
@@ -7,5 +7,10 @@
 
   &:not(:last-child) {
     margin-right: 0.25rem;
+  }
+
+  &.sticker--inline {
+    display: inline-block;
+    margin-bottom: 0;
   }
 }
