--- a/app/assets/stylesheets/layouts.scss
+++ b/app/assets/stylesheets/layouts.scss
@@ -28,6 +28,9 @@ section {
 
     .page__main__content {
       flex-grow: 1;
+
+      display: flex;
+      flex-direction: column;
     }
   }
 
@@ -67,7 +70,6 @@ section {
   margin: 0 2rem;
   padding: 2rem 4rem;
   position: relative;
-  box-shadow: -2px -2px 4px black;
 
   &::after {
     content: '';
