--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,24 +28,26 @@
   </head>
 
   <body class="<%= @body_class %>" style="<%= @body_style %>">
-    <div class="page">
-      <%= rp 'layouts/header' %>
+    <% if @skip_wrappers %>
+      <%= yield %>
+    <% else %>
+      <div class="page">
+        <%= rp 'layouts/header' %>
 
-      <main class="page__main">
-        <%= component :contextbar, **@cbar, &@cbar_block if @cbar %>
+        <main class="page__main">
+          <%= component :contextbar, **@cbar, &@cbar_block if @cbar %>
 
-        <div class="page__main__content">
-          <% if @paper %>
-            <div class="paper">
+          <div class="page__main__content">
+            <% if @paper %>
+              <div class="paper">
+                <%= yield %>
+              </div>
+            <% else %>
               <%= yield %>
-            </div>
-          <% else %>
-            <%= yield %>
-          <% end %>
-        </div>
-      </main>
-
-      <%= rp 'layouts/footer' %>
-    </div>
+            <% end %>
+          </div>
+        </main>
+      </div>
+    <% end %>
   </body>
 </html>
