--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -11,6 +11,7 @@ $base-colors: (
   primary: #4d698e,
   dark-primary: darken(#4d698e, 10%),
   pinned: #d91141,
+  draft: #DA70D6,
   game: #EC6363,
   resource: #ff912b,
   tutorial: #FFAD33,
